<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/PrimaryColor"
    tools:context=".fragments.main_page_fragments.ModuleFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/please_choose_a_subject"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/title"
        />

<!-- Modules below -->
    <TextView
        android:id="@+id/tv_benefits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="250dp"
        android:textAlignment="center"
        android:background="@drawable/main_page_options"
        android:padding="8dp"
        android:text="@string/benefits"
        android:layout_marginTop="25dp"
        android:textSize="18sp"
        android:textColor="@color/PrimaryText"
        app:layout_constraintTop_toBottomOf="@id/tv_instruction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_everydayMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/main_page_options"
        android:padding="8dp"
        android:text="@string/everyday_money"
        android:textSize="18sp"
        android:textColor="@color/PrimaryText"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_benefits"
        android:layout_marginTop="10dp"
        android:minWidth="250dp"

         />

    <TextView
        android:id="@+id/tv_familyAndCare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/main_page_options"
        android:padding="8dp"
        android:text="@string/family_amp_care"
        android:textSize="18sp"
        android:textColor="@color/PrimaryText"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/tv_everydayMoney"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:minWidth="250dp"
         />

    <TextView
        android:id="@+id/tv_homes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/main_page_options"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/homes"
        android:textSize="18sp"
        android:textColor="@color/PrimaryText"
        android:minWidth="250dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/tv_familyAndCare"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
         />

    <TextView
        android:id="@+id/tv_moneyProblems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/main_page_options"
        android:padding="8dp"
        android:textSize="18sp"
        android:text="@string/money_problems"
        android:textColor="@color/PrimaryText"
        android:textAlignment="center"
        android:minWidth="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_homes"
        />

    <TextView
        android:id="@+id/tv_pensionsAndRetirement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/main_page_options"
        android:padding="8dp"
        android:text="@string/pensions_amp_retirement"
        android:textSize="18sp"
        android:textColor="@color/PrimaryText"
        android:layout_marginTop="10dp"
        android:minWidth="250dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/tv_moneyProblems"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

         />

    <TextView
        android:id="@+id/tv_savings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/main_page_options"
        android:padding="8dp"
        android:textSize="18sp"
        android:text="@string/savings"
        android:textColor="@color/PrimaryText"
        android:textAlignment="center"
        android:minWidth="250dp"
        app:layout_constraintTop_toBottomOf="@id/tv_pensionsAndRetirement"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/main_page_options"
        android:padding="8dp"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:text="@string/work"
        android:textColor="@color/PrimaryText"
        android:minWidth="250dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/tv_savings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/britannic"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:text="£"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_work"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>