<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/PrimaryColor"
    tools:context=".view.QuizResult">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/info_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:fontFamily="@font/roboto_bold"
            android:textAlignment="center"
            android:text="@string/quiz_completed"
            android:textColor="@color/PrimaryColor"
            android:textSize="36sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:text="@string/you_scored"
            android:textColor="@color/PrimaryText"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_percentage"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:text="You Scored:"/>

        <TextView
            android:id="@+id/tv_scoreView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/PrimaryText"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_score"
            app:layout_constraintTop_toTopOf="@id/tv_score"
            app:layout_constraintStart_toEndOf="@id/tv_score"
            tools:text="Test"
            />

        <TextView
            android:id="@+id/tv_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/your_score_as_a_percentage"
            android:textColor="@color/PrimaryText"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_feedback"
            app:layout_constraintTop_toBottomOf="@id/tv_scoreView"
            tools:text="Your score as a percentage:" />

        <TextView
            android:id="@+id/tv_percentageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/PrimaryText"
            android:textSize="15sp"
            app:layout_constraintTop_toTopOf="@id/tv_percentage"
            app:layout_constraintBottom_toBottomOf="@id/tv_percentage"
            app:layout_constraintStart_toEndOf="@id/tv_percentage"
            tools:text="Test" />

        <TextView
            android:id="@+id/tv_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text=""
            android:textColor="@color/PrimaryText"
            android:textSize="18sp"
            android:textAlignment="center"
            android:fontFamily="@font/roboto_light"
            app:layout_constraintBottom_toTopOf="@id/pb_RatingBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_percentage"
            tools:text="FEEDBACK" />

        <RatingBar
            android:id="@+id/pb_RatingBar"
            android:progressTint="@color/PrimaryColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_feedback"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_home"
            android:layout_marginTop="10dp"
            android:isIndicator="true"
            />

        <Button
            android:id="@+id/btn_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/go_to_main_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>